k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-ecom-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/mjawadi812/mini-ecom-backend:latest
        ports:
          - containerPort: 8080
